--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -1,166 +1,127 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>StartNet</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="#" />
-		<noscript><link rel="stylesheet" href="#" /></noscript>
-	</head>
-	<body class="is-preload">
+<html lang="pt-br">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="#" />
+	<title>STARTNET</title>
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-
-						<nav>
-							<a href="index.html" class="logo"><strong>STARTNET</strong></a>
-						    <a href="#menu">Home</a>
-							<a href="#menu">Planos</a>
-							<a href="#menu">A Empresa</a>
-							<a href="#menu">Central do Assinante</a>
-						</nav>
-					</header>
-
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- One -->
-							<section id="one" class="tiles">
-								<article>
-									<span class="image">
-										<img src="#" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link"></a></h3>
-										<p>A fibra que você <br> sempre sonhou <br> agora ao seu <br> alcance</p>
-									</header>
-								</article>
-								<article>
-									<header class="major">
-										<p>Escolha o melhor plano para você</p>
-									</header>
-								</article>
-								<article>
-									<header class="major">
-										<h> 20 <br> mega</h>
-										<p>WI-FI GRÁTIS</p>
-										<P>R$49,90</P>
-										<button class="button button1">Assine já</button>
-									</header>
-								</article>
-								<article>
-									<header class="major">
-										<h> 60 <br> mega</h>
-										<p>WI-FI GRÁTIS</p>
-										<P>R$49,90</P>
-										<button class="button button1">Assine já</button>
-									</header>
-								</article>
-								<article>
-									<header class="major">
-										<h> 100 <br> mega</h>
-										<p>WI-FI GRÁTIS</p>
-										<P>R$49,90</P>
-										<button class="button button1">Assine já</button>
-									</header>
-								</article>
-								<article>
-									<header class="major">
-										<h> 150 <br> mega</h>
-										<p>WI-FI GRÁTIS</p>
-										<P>R$49,90</P>
-										<button class="button button1">Assine já</button>
-									</header>
-								</article>
-								<article>
-									<header class="major">
-										<h> 200 <br> mega</h>
-										<p>WI-FI GRÁTIS</p>
-										<P>R$49,90</P>
-										<button class="button button1">Assine já</button>
-									</header>
-								</article>
-							</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="inner">
-									<header class="major">
-										<h2>A START FIBRA <br> Navegue com ultravelocidade de até 200 mega</h2>
-									</header>
-									<header class="major">
-										<a href="#" class="#"><img src="#" alt="" /></a>
-										<h3>Maior desempenho</h3>
-										<p>Baixe arquivos, assista a vídeos <br> em HD e jogue online</p>
-									</header>
-									<header class="major">
-										<a href="#" class="#"><img src="#" alt="" /></a>
-										<h3>Altas velocidades de upload</h3>
-										<p>Compartilhe fotos e vídeos <br> com mais rapidez.</p>
-									</header>
-									<header class="major">
-										<a href="#" class="#"><img src="#" alt="" /></a>
-										<h3>Mais estabilidade</h3>
-										<p>Acesse a internet de vários <br> dispositivos ao mesmo tempo.</p>
-									</header>
-									<header class="major">
-										<a href="#" class="#"><img src="#" alt="" /></a>
-										<h3>Suporte para novos serviços.</h3>
-										<p>Nosso objetivo é a satisfação <br> de todos.</p>
-									</header>
-								</div>
-							</section>
-
-					</div>
-				<!-- Tree -->
-				<section id="tree">
-					<div class="inner">
-						<header class="major">
-							<h2>Sobre nossa empresa!</h2>
-						</header>
-						<header class="major">
-							<a href="#" class="#"><img src="#" alt="" /></a>
-							<h3>História!</h3>
-							<p>Nossa trajetória começou em 2021 <br> quando enxergamos a necessidade de um <br> provedor que fornecesse internet com <br> velocidade e estabilidade a um custo <br> acessível para todos</p>
-						</header>
-						<header class="major">
-							<a href="#" class="#"><img src="#" alt="" /></a>
-							<h3>Missão</h3>
-							<p>Nossa missão é levar a comunicação através da internet com tecnologia de ponta. Expandi-la em todas as áreas <br> inclusive de dificil acesso.</p>
-						</header>
-						<header class="major">
-							<a href="#" class="#"><img src="#" alt="" /></a>
-							<h3>Valores</h3>
-							<p>Somos um time apaixonados por servir <br> nossos clientes com qualidade e transparência.</p>
-						</header>
-					</div>
-				</section>
-
-		</div>	
-
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<p>Siga-nos em nossas <br> redes sociais:</p>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<p>Copyright &copy; 2021 STARTNET.</p> 
-							</ul>
-						</div>
-					</footer>
-
-			</div>
-	</body>
+<body>
+	<header id="top-header">
+		<div>
+			<nav class="top-nav">
+				<ul>
+					<li><a href="index.html" class="logo"><strong>StartNet</strong></a></li>
+					<li><a href="#menu">Home</a></li>
+					<li><a href="#menu">Planos</a></li>
+					<li><a href="#menu">A Empresa</a></li>
+					<li><a href="#menu">Central do Assinante</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<section class="top-content">
+		<div class="image">
+			<img src="#" alt="" />
+		</div>
+		<h2><a href="landing.html" class="link"></a></h2>
+		<p>A fibra que você <br> sempre sonhou <br> agora ao seu <br> alcance</p>
+	</section>
+	<section id="middle-content">
+		<div class="maxwidth">
+			<article>
+				<h3>Escolha o melhor plano para você</h3>
+			</article>
+			<article>
+				<h3> 20 <br> mega</h3>
+				<p>WI-FI GRÁTIS</p>
+				<P>R$49,90</P>
+				<button class="sign">Assine já</button>
+			</article>
+			<article>
+				<h3> 60 <br> mega</h3>
+				<p>WI-FI GRÁTIS</p>
+				<P>R$69,90</P>
+				<button class="sign">Assine já</button>
+			</article>
+			<article>
+				<h> 100 <br> mega</h>
+				<p>WI-FI GRÁTIS</p>
+				<P>R$89,90</P>
+				<button class="sign">Assine já</button>
+			</article>
+			<article>
+				<h> 150 <br> mega</h>
+				<p>WI-FI GRÁTIS</p>
+				<P>R$109,90</P>
+				<button class="sign">Assine já</button>
+			</article>
+			<article>
+				<h> 200 <br> mega</h>
+				<p>WI-FI GRÁTIS</p>
+				<P>R$139,90</P>
+				<button class="sign">Assine já</button>
+			</article>
+		</div>
+	</section>
+	<section id="main-content">
+		<div class="maxwidth">
+			<h2>A START FIBRA <br> Navegue com ultravelocidade de até 200 mega</h2>
+			<article>
+				<a href="#" class="#"><img src="#" alt="" /></a>
+				<h3>Maior desempenho</h3>
+				<p>Baixe arquivos, assista a vídeos <br> em HD e jogue online</p>
+			</article>
+			<article>
+				<a href="#" class="#"><img src="#" alt="" /></a>
+				<h3>Altas velocidades de upload</h3>
+				<p>Compartilhe fotos e vídeos <br> com mais rapidez.</p>
+			</article>
+			<article>
+				<a href="#" class="#"><img src="#" alt="" /></a>
+				<h3>Mais estabilidade</h3>
+				<p>Acesse a internet de vários <br> dispositivos ao mesmo tempo.</p>
+			</article>
+			<article>
+				<a href="#" class="#"><img src="#" alt="" /></a>
+				<h3>Suporte para novos serviços.</h3>
+				<p>Nosso objetivo é a satisfação <br> de todos.</p>
+			</article>
+		</div>
+	</section>
+	<section id="history-content">
+		<div class="maxwidth">
+			<h2>Sobre nossa empresa!</h2>
+			<article>
+				<a href="#" class="#"><img src="#" alt="" /></a>
+				<h3>História!</h3>
+				<p>Nossa trajetória começou em 2021 <br> quando enxergamos a necessidade de um <br> provedor que
+					fornecesse internet com <br> velocidade e estabilidade a um custo <br> acessível para todos</p>
+			</article>
+			<article>
+				<a href="#" class="#"><img src="#" alt="" /></a>
+				<h3>Missão</h3>
+				<p>Nossa missão é levar a comunicação através da internet com tecnologia de ponta. Expandi-la em
+					todas as áreas <br> inclusive de dificil acesso.</p>
+			</article>
+			<article>
+				<a href="#" class="#"><img src="#" alt="" /></a>
+				<h3>Valores</h3>
+				<p>Somos um time apaixonados por servir <br> nossos clientes com qualidade e transparência.</p>
+			</article>
+		</div>
+	</section>
+	<footer id="footer">
+		<p>Telefone e Whatsapp: +55 11 1111-2222</p>
+		<p>Siga-nos em nossas <br> redes sociais:</p>
+		<ul class="icons">
+			<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+			<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+		</ul>
+		<p>Startnet-cnpj: 48.520.165/0003-90</p>
+	</footer>
+</body>
 </html>
