--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -5,16 +5,17 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="#" />
+	<link rel="stylesheet" href="./css/style.css" />
+	<link rel="stylesheet" href="./css/normalize.css">
 	<title>STARTNET</title>
 </head>
 
 <body>
 	<header id="top-header">
 		<div>
+			<img class="logo" src="./assets/LOGO PRINCIPAL 2.png" alt="">
 			<nav class="top-nav">
 				<ul>
-					<li><a href="index.html" class="logo"><strong>StartNet</strong></a></li>
 					<li><a href="#menu">Home</a></li>
 					<li><a href="#menu">Planos</a></li>
 					<li><a href="#menu">A Empresa</a></li>
@@ -25,10 +26,8 @@
 	</header>
 	<section class="top-content">
 		<div class="image">
-			<img src="#" alt="" />
+			<img src="./assets/pexels-vlada-karpovich-4050296.jpg" alt="Capa.jpg" style="width: 1663px; height: 550px; object-fit: cover; object-position: 50% 50%;">
 		</div>
-		<h2><a href="landing.html" class="link"></a></h2>
-		<p>A fibra que você<br>sempre sonhou<br>agora ao seu<br>alcance</p>
 	</section>
 	<section id="middle-content">
 		<div class="maxwidth">
