--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -13,7 +13,7 @@
 <body>
 	<header id="top-header">
 		<div>
-			<img class="logo" src="./assets/LOGO PRINCIPAL 2.png" alt="">
+			<img class="logo" src="./assets/logo.png" alt="logo">
 			<nav class="top-nav">
 				<ul>
 					<li><a href="#menu">Home</a></li>
@@ -26,7 +26,7 @@
 	</header>
 	<section class="top-content">
 		<div class="image">
-			<img src="./assets/pexels-vlada-karpovich-4050296.jpg" alt="Capa.jpg" style="width: 1663px; height: 550px; object-fit: cover; object-position: 50% 50%;">
+			<img src="./assets/website_cover.jpg" alt="Capa.jpg" style="width: 1663px; height: 550px; object-fit: cover; object-position: 50% 50%;">
 		</div>
 	</section>
 	<section id="middle-content">
