css in progress

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -7,13 +7,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/style.css" />
 	<link rel="stylesheet" href="./css/normalize.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200;300&display=swap" rel="stylesheet">
 	<title>STARTNET</title>
 </head>
 
 <body>
 	<header id="top-header">
 		<div>
-			<img class="logo" src="./assets/logo.png" alt="logo">
+			<img class="logo" src="./assets/logo.png" alt="logo" style="height: 95px;">
 			<nav class="top-nav">
 				<ul>
 					<li><a href="#menu">Home</a></li>
@@ -26,14 +30,16 @@
 	</header>
 	<section class="top-content">
 		<div class="image">
-			<img src="./assets/website_cover.jpg" alt="Capa.jpg" style="width: 1663px; height: 550px; object-fit: cover; object-position: 50% 50%;">
+			<img src="./assets/website_cover.jpg" alt="Capa.jpg"
+				style="width: 1663px; height: 550px; object-fit: cover; object-position: 50% 50%;">
+		</div>
+		<div class="text">
+			<h1>A fibra que você sempre sonhou agora ao seu alcance</h1>
 		</div>
 	</section>
 	<section id="middle-content">
 		<div class="maxwidth">
-			<article>
-				<h3>Escolha o melhor plano para você</h3>
-			</article>
+			<h2 class="titles">Escolha o melhor plano para você</h2>
 			<article>
 				<h3>20<br>mega</h3>
 				<p>WI-FI GRÁTIS</p>
@@ -47,19 +53,19 @@
 				<button class="sign">Assine já</button>
 			</article>
 			<article>
-				<h>100<br>mega</h>
+				<h3>100<br>mega</h3>
 				<p>WI-FI GRÁTIS</p>
 				<P>R$89,90</P>
 				<button class="sign">Assine já</button>
 			</article>
 			<article>
-				<h>150<br>mega</h>
+				<h3>150<br>mega</h3>
 				<p>WI-FI GRÁTIS</p>
 				<P>R$109,90</P>
 				<button class="sign">Assine já</button>
 			</article>
 			<article>
-				<h>200<br>mega</h>
+				<h3>200<br>mega</h3>
 				<p>WI-FI GRÁTIS</p>
 				<P>R$139,90</P>
 				<button class="sign">Assine já</button>
