I changed some classes

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -8,16 +8,18 @@
 	<link rel="stylesheet" href="./css/style.css" />
 	<link rel="stylesheet" href="./css/normalize.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200;300&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:wght@633&display=swap"rel="stylesheet">
 	<title>STARTNET</title>
 </head>
 
 <body>
 	<header id="top-header">
 		<div>
-			<img class="logo" src="./assets/logo.png" alt="logo" style="height: 95px;">
+			<a href="#menu"><img class="logo" src="./assets/logo.png" alt="logo" style="height: 95px;"></a>
 			<nav class="top-nav">
 				<ul>
 					<li><a href="#menu">Home</a></li>
@@ -31,7 +33,7 @@
 	<section class="top-content">
 		<div class="image">
 			<img src="./assets/website_cover.jpg" alt="Capa.jpg"
-				style="width: 1663px; height: 550px; object-fit: cover; object-position: 50% 50%;">
+                style="width: 1663px; height: 550px; object-fit: cover; object-position: 50% 50%;">
 		</div>
 		<div class="text">
 			<h1>A fibra que você sempre sonhou agora ao seu alcance</h1>
@@ -40,35 +42,51 @@
 	<section id="middle-content">
 		<div class="maxwidth">
 			<h2 class="titles">Escolha o melhor plano para você</h2>
-			<article>
-				<h3>20<br>mega</h3>
-				<p>WI-FI GRÁTIS</p>
-				<P>R$49,90</P>
-				<button class="sign">Assine já</button>
+			<div class="line"></div>
+			<article class="col-1_4">
+				<div class="box">
+					<span class="number">20</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price"><p>R$49,90</p></span>
+					<button class="button-sign">Assine já</button>
+				</div>
 			</article>
-			<article>
-				<h3>60<br>mega</h3>
-				<p>WI-FI GRÁTIS</p>
-				<P>R$69,90</P>
-				<button class="sign">Assine já</button>
+			<article class="col-1_4">
+				<div class="box">
+					<span class="number">60</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price"><p>R$69,90</p></span>
+					<button class="button-sign">Assine já</button>
+				</div>
 			</article>
-			<article>
-				<h3>100<br>mega</h3>
-				<p>WI-FI GRÁTIS</p>
-				<P>R$89,90</P>
-				<button class="sign">Assine já</button>
+			<article class="col-1_4">
+				<div class="box-middle">
+					<span class="number">100</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price"><p>R$89,90</p></span>
+					<button class="button-sign-middle">Assine já</button>
+				</div>
 			</article>
-			<article>
-				<h3>150<br>mega</h3>
-				<p>WI-FI GRÁTIS</p>
-				<P>R$109,90</P>
-				<button class="sign">Assine já</button>
+			<article class="col-1_4">
+				<div class="box">
+					<span class="number">150</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price"><p>R$109,90</p></span>
+					<button class="button-sign">Assine já</button>
+				</div>
 			</article>
-			<article>
-				<h3>200<br>mega</h3>
-				<p>WI-FI GRÁTIS</p>
-				<P>R$139,90</P>
-				<button class="sign">Assine já</button>
+			<article class="col-1_4">
+				<div class="box">
+					<span class="number">200</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price"><p>R$139,90</p></span>
+					<button class="button-sign">Assine já</button>
+				</div>
 			</article>
 		</div>
 	</section>
