I put some icons and changed some texts

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -13,6 +13,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:wght@633&display=swap"rel="stylesheet">
+	<link rel="stylesheet" href="icomoon/style.css">
 	<title>STARTNET</title>
 </head>
 
@@ -90,27 +91,28 @@
 			</article>
 		</div>
 	</section>
-	<section id="main-content">
+	<section class="main-content">
 		<div class="maxwidth">
-			<h2>A START FIBRA<br>Navegue com ultravelocidade de até 200 mega</h2>
-			<article>
-				<a href="#" class="#"><img src="#" alt="" /></a>
-				<h3>Maior desempenho</h3>
+			<h2 class="titles">A START FIBRA</h2>
+			<p class="titlep">Navegue com ultravelocidade de até 200 mega</p>
+			<article class="main-content-article col-1_2"> 
+				<span class="icon-download3"></span>
+				<h3 class="main-content-title">Maior desempenho</h3>
 				<p>Baixe arquivos, assista a vídeos<br>em HD e jogue online</p>
 			</article>
-			<article>
-				<a href="#" class="#"><img src="#" alt="" /></a>
-				<h3>Altas velocidades de upload</h3>
+			<article class="main-content-article col-1_2">
+				<span class="icon-cloud-upload"></span>
+				<h3 class="main-content-title">Altas velocidades de upload</h3>
 				<p>Compartilhe fotos e vídeos<br>com mais rapidez.</p>
 			</article>
-			<article>
-				<a href="#" class="#"><img src="#" alt="" /></a>
-				<h3>Mais estabilidade</h3>
+			<article class="main-content-article col-1_2">
+				<span class="icon-important_devices"></span>
+				<h3 class="main-content-title">Mais estabilidade</h3>
 				<p>Acesse a internet de vários<br>dispositivos ao mesmo tempo.</p>
 			</article>
-			<article>
-				<a href="#" class="#"><img src="#" alt="" /></a>
-				<h3>Suporte para novos serviços.</h3>
+			<article class="main-content-article col-1_2">
+				<span class="icon-support_agent"></span>
+				<h3 class="main-content-title">Suporte para novos serviços.</h3>
 				<p>Nosso objetivo é a satisfação<br>de todos.</p>
 			</article>
 		</div>
