--- a/Front-end/forms.html
+++ b/Front-end/forms.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+<script defer src="script.js"></script>  
 <body>
+<div id="error"></div>  
 <div class="wrapper">
   <img src="./assets/logo.png" alt="startnet logo">    
   <h3>LOGIN</h3>
-  <form action="Forms-Login">
+  <form id="form" action="Forms-Login">
     <label for="email">E-mail</label>
     <input type="email" id="email" name="email" placeholder="E-mail"><br>
     <label for="password">Senha</label>
