change in HTML index and CSS style

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -12,8 +12,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200;300&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:wght@633&display=swap"rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:wght@633&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="icomoon/style.css">
+	<script src="https://kit.fontawesome.com/7c615c2452.js" crossorigin="anonymous"></script>
 	<title>STARTNET</title>
 </head>
 
@@ -34,7 +36,7 @@
 	<section class="top-content">
 		<div class="image">
 			<img src="./assets/website_cover.jpg" alt="Capa.jpg"
-                style="width: 1663px; height: 550px; object-fit: cover; object-position: 50% 50%;">
+				style="width: 1663px; height: 550px; object-fit: cover; object-position: 50% 50%;">
 		</div>
 		<div class="text">
 			<h1>A fibra que você sempre sonhou agora ao seu alcance</h1>
@@ -49,7 +51,9 @@
 					<span class="number">20</span>
 					<span class="mega">mega</span>
 					<span class="p-wifi">Wi-fi grátis</span>
-					<span class="price"><p>R$49,90</p></span>
+					<span class="price">
+						<p>R$49,90</p>
+					</span>
 					<button class="button-sign">Assine já</button>
 				</div>
 			</article>
@@ -58,7 +62,9 @@
 					<span class="number">60</span>
 					<span class="mega">mega</span>
 					<span class="p-wifi">Wi-fi grátis</span>
-					<span class="price"><p>R$69,90</p></span>
+					<span class="price">
+						<p>R$69,90</p>
+					</span>
 					<button class="button-sign">Assine já</button>
 				</div>
 			</article>
@@ -67,7 +73,9 @@
 					<span class="number">100</span>
 					<span class="mega">mega</span>
 					<span class="p-wifi">Wi-fi grátis</span>
-					<span class="price"><p>R$89,90</p></span>
+					<span class="price">
+						<p>R$89,90</p>
+					</span>
 					<button class="button-sign-middle">Assine já</button>
 				</div>
 			</article>
@@ -76,7 +84,9 @@
 					<span class="number">150</span>
 					<span class="mega">mega</span>
 					<span class="p-wifi">Wi-fi grátis</span>
-					<span class="price"><p>R$109,90</p></span>
+					<span class="price">
+						<p>R$109,90</p>
+					</span>
 					<button class="button-sign">Assine já</button>
 				</div>
 			</article>
@@ -85,7 +95,9 @@
 					<span class="number">200</span>
 					<span class="mega">mega</span>
 					<span class="p-wifi">Wi-fi grátis</span>
-					<span class="price"><p>R$139,90</p></span>
+					<span class="price">
+						<p>R$139,90</p>
+					</span>
 					<button class="button-sign">Assine já</button>
 				</div>
 			</article>
@@ -93,9 +105,9 @@
 	</section>
 	<section class="main-content">
 		<div class="maxwidth">
-			<h2 class="titles">A START FIBRA</h2>
-			<p class="titlep">Navegue com ultravelocidade de até 200 mega</p>
-			<article class="main-content-article col-1_2"> 
+			<h2 class="main-title">A StartNet Fibra</h2>
+			<p class="titlep">Navegue com ultravelocidade de até <span style="color: #FF8314;">200</span> mega</p>
+			<article class="main-content-article col-1_2">
 				<span class="icon-download3"></span>
 				<h3 class="main-content-title">Maior desempenho</h3>
 				<p>Baixe arquivos, assista a vídeos<br>em HD e jogue online</p>
@@ -112,41 +124,54 @@
 			</article>
 			<article class="main-content-article col-1_2">
 				<span class="icon-support_agent"></span>
-				<h3 class="main-content-title">Suporte para novos serviços.</h3>
-				<p>Nosso objetivo é a satisfação<br>de todos.</p>
+					<h3 class="main-content-title">Suporte para novos serviços.</h3>
+					<p>Nosso objetivo é a satisfação<br>de todos.</p>
 			</article>
 		</div>
 	</section>
-	<section id="history-content">
+	<section id="company-content">
 		<div class="maxwidth">
-			<h2>Sobre nossa empresa!</h2>
-			<article>
-				<a href="#" class="#"><img src="#" alt="" /></a>
-				<h3>História!</h3>
-				<p>Nossa trajetória começou em 2021<br> quando enxergamos a necessidade de um<br>provedor que
-					fornecesse internet com<br>velocidade e estabilidade a um custo<br>acessível para todos</p>
-			</article>
-			<article>
-				<a href="#" class="#"><img src="#" alt="" /></a>
-				<h3>Missão</h3>
-				<p>Nossa missão é levar a comunicação através da internet com tecnologia de ponta. Expandi-la em
-					todas as áreas<br>inclusive de dificil acesso.</p>
-			</article>
-			<article>
-				<a href="#" class="#"><img src="#" alt="" /></a>
-				<h3>Valores</h3>
-				<p>Somos um time apaixonados por servir<br>nossos clientes com qualidade e transparência.</p>
-			</article>
+			<h2 class="company-title">Sobre nossa empresa!</h2>
+			<div>
+				<article class="content-article">
+					<i class="fas fa-book-open icon"></i>
+					<h3 class="titles">História!</h3>
+					<p class="content-p">Nossa trajetória começou em 2021<br> quando enxergamos a necessidade de
+						um<br>provedor que
+						fornecesse internet com<br>velocidade e estabilidade a um custo<br>acessível para todos</p>
+				</article>
+			</div>
+			<div>
+				<article class="content-article">
+					<i class="fas fa-bullseye icon"></i>
+					<h3 class="titles">Missão</h3>
+					<p class="content-p">Nossa missão é levar a comunicação através da internet com tecnologia de ponta.
+						Expandi-la em
+						todas as áreas<br>inclusive de difícil acesso.</p>
+				</article>
+			</div>
+			<div>
+				<article class="content-article">
+					<i class="far fa-heart icon"></i>
+					<h3 class="titles">Valores</h3>
+					<p class="content-p">Somos um time apaixonados por servir<br>nossos clientes com qualidade e
+						transparência.</p>
+				</article>
+			</div>
 		</div>
 	</section>
-	<footer id="footer">
-		<p>Telefone e Whatsapp: +55 11 1111-2222</p>
-		<p>Siga-nos em nossas<br>redes sociais:</p>
-		<ul class="icons">
-			<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-			<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-		</ul>
-		<p>Startnet-cnpj: 48.520.165/0003-90</p>
+	<footer class="main-footer">
+		<p class="footer-p">Telefone e Whatsapp: +55 11 1111-2222</p>
+		<p class="footer-p">Siga-nos em nossas<br>redes sociais:</p>
+		<nav class="footer-nav">
+			<ul class="ul-icons">
+				<li><a href="https://www.instagram.com/" target="_blank" class="icon-instagram"><i
+							class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.facebook.com" target="_blank" class="icon-facebook"><i
+							class="fab fa-facebook-square"></i></a></li>
+			</ul>
+		</nav>
+		<p class="footer-p">Startnet-cnpj: 48.520.165/0003-90</p>
 	</footer>
 </body>
 
