--- a/Front-end/forms.html
+++ b/Front-end/forms.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<script defer src="script.js"></script>  
+<script defer src="./js/forms.js"></script>  
 <body>
 <div id="error"></div>  
 <div class="wrapper">
